# COS710_A2

./: .gitignore  CMakeLists.txt  readme.md
data/: heart-disease.names
src/: CompShader.cpp  CompShader.h  DataLoader.cpp  DataLoader.h  Fitness.cpp  Fitness.h  Float16.h  Helpers.cpp  Helpers.h  Logger.cpp  Logger.h  Manager.cpp  Manager.h  Node.cpp  Node.h  Parameters.h  Population.cpp  Tree.cpp  Tree.h  TreeGen.cpp  compshader.glsl  cpuExec.cpp  cpuExec.h  main.cpp
src/Population/: GPUNode.cpp  GPUNode.h  Node.cpp  Node.h  Population.cpp  Population.h  Productions.cpp  Productions.h  Tree.cpp  Tree.h  TreeGen.cpp  TreeGen.h
